<resources>
    <string name="app_name">NamiKot</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="login">Login</string>
    <string name="signIn">Connection</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat password</string>
    <string name="resetPassword">Password modification</string>
    <string name="mail">Email address</string>
    <string name="reset">Change</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_kots">Kots</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_map">Map</string>
    <string name="title_list">List</string>
    <string name="signUp">Sign Up</string>
    <string name="signUpTitle">Sign Up</string>
    <string name="signUpButton">Sign up</string>
    <string name="badLoginExcept1">Login</string>
    <string name="badLoginExcept2">or password incorrect.</string>
    <string name="markerDesc">Kot n°</string>

    <!-- Fragment profile -->
    <string name="profile_last_name">Last name</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_birthdate">Birthdate</string>


    <string name="message_user1">Hello, I have a little problem with something. The...</string>
    <string name="message_user2">Hello, here is the documents you wanted. All is enclosed up...</string>
    <string name="modifyProfileButton">Modify profile</string>
    <string name="buttonProfileSave">Save</string>
    <string name="buttonProfileCancel">Cancel</string>

    <string name="userInfoNotFoundException">User informations not found</string>
    <string name="alreadyExistsExceptionPart1">The login, mail</string>
    <string name="alreadyExistsExceptionPart2">, or both is (are) already used</string>
    <string name="passwordsNotConcording">Passwords are not the same</string>
    <string name="loginPasswordEmpty">Login, password or both fields is (are) empty</string>
    <string name="parseException">The date format is not correct (DD/MM/YYYY)</string>
    <string name="internetConnection">Make sure that your Internet connection is enabled.</string>
    <string name="passwordNotCorrect">Password length must be 8, \npassword requires 6 unique characters, \n1 letter in uppercase and 1 number.</string>
    <string name="mailNotValid">Invalid mail type. (Ex: john.doe@exmple.com)</string>
    <string name="passwordChanged">Password has changed</string>
</resources>
