<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henallux.namikot.Controller.ForgotPasswordActivity">

    <EditText
        android:id="@+id/verifLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="141dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="145dp" />

    <EditText
        android:id="@+id/verifMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/verifLogin"
        android:layout_alignStart="@+id/verifLogin"
        android:layout_below="@+id/verifLogin"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:typeface="normal" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/verifMail"
        android:layout_alignRight="@+id/verifMail"
        android:layout_below="@+id/verifMail"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editPassword"
        android:layout_alignRight="@+id/editPassword"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/resetPassword"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progressBarForgotPassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:progressTint="@color/colorPrimary"
        android:visibility="gone" />

</RelativeLayout>
