<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="35dp"

    >

    <TextView
        android:id="@+id/modify_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/profile_first_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/modify_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/profile_last_name"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/modify_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/profile_birthdate"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/modify_login_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:text="@string/login"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/modify_mail_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:text="@string/mail"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/modify_user_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/modify_user_birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/modify_login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="135dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/modify_mail_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:saveEnabled="false"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/modify_user_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/modify_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonProfileCancel"
            android:layout_alignBaseline="@+id/modify_button_save"
            android:layout_alignBottom="@+id/modify_button_save"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="36dp" />

        <Button
            android:id="@+id/modify_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonProfileSave"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="21dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


</FrameLayout>